--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
     "@carbon/icons": "^11.57.0",
+    "@ng-icons/core": "^31.2.0",
+    "@ng-icons/feather-icons": "^31.2.0",
+    "@ng-icons/heroicons": "^31.2.0",
     "carbon-components": "^11.66.1",
     "carbon-components-angular": "^5.57.5",
     "rxjs": "~7.8.0",
